got the game to work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="assets/images/site.webmanifest">
+    
 </head>
 <!-- Site Header -->
 
@@ -41,13 +42,11 @@
                 <p id="losses-text"></p>
                <p id ="currentWord-text">Current Word</p>  
                <p id = "blanks-text"> </p>   
-               <p id="guessesRemaining-text"> </p>
-               <p id="lettersGuessed-text">Letters already guessed:</p>    
-              </div>
-
-            <script src = "assets/javascript/game.js"></script>
-            
+               <p id="guesses-text"> Guesses remaining:</p>
+               <p id="GuessedArray-text">Letters already guessed:</p>    
+              </div>    
             </section>
             </div>
+            <script type="text/javascript" src = "assets/javascript/game.js"></script> 
             </body>
             </html>
