--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess | Julia Dischell</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="assets/images/site.webmanifest">
-    
+
 </head>
 <!-- Site Header -->
 
@@ -21,9 +21,9 @@
         <a id="logo" href="#">Julia Dischell</a>
         <nav>
             <ul>
-                <li class="links"><a href="index.html">About</a></li>
-                <li class="links"><a href="portfolio.html">Portfolio</a></li>
-                <li id="links-last-child"><a href="contact.html">Contact</a></li>
+                <li class="links"><a href="../Responsive-Portfolio/index.html">About</a></li>
+                <li class="links"><a href="../Responsive-Portfolio/portfolio.html">Portfolio</a></li>
+                <li id="links-last-child"><a href="../Responsive-Portfolio/contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -36,17 +36,19 @@
             <hr>
             <div id="game">
                 <p id="Directions-text"> Press any key to get started!</p>
-                <p id="userChoice-text"></p>
-                <p id="band-text"></p>
                 <p id="wins-text"></p>
                 <p id="losses-text"></p>
-               <p id ="currentWord-text">Current Word</p>  
-               <p id = "blanks-text"> </p>   
-               <p id="guesses-text"> Guesses remaining:</p>
-               <p id="GuessedArray-text">Letters already guessed:</p>    
-              </div>    
-            </section>
+                <p id="currentWord-text">Current Word</p>
+                <p id="blanks-text"> </p>
+                <p id="guesses-text"> Guesses remaining:</p>
+                <p id="GuessedArray-text">Letters already guessed:</p>
             </div>
-            <script type="text/javascript" src = "assets/javascript/game.js"></script> 
-            </body>
-            </html>
+        </section>
+    </div>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <footer>
+        <p>© 2019</p>
+    </footer>
+</body>
+
+</html>
