added the readme, added some css, other updates

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess | Julia Dischell</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+  
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
@@ -32,9 +33,10 @@
 <body>
     <div id="main-container" class="container">
         <section class="main-section">
-            <h1>Word Guess Game</h1>
+            <h1>Portfolio</h1>
             <hr>
             <div id="game">
+                <h2>Word Guess Game</h2>
                 <p id="Directions-text"> Press any key to get started!</p>
                 <p id="wins-text"></p>
                 <p id="losses-text"></p>
