made more mobile responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
         <div class="dropdown-content">
           <a href="https://www.linkedin.com/in/juliadischell/">LinkedIn</a>
-          <a href="assets/images/JDresume2019.pdf">Resume</a>
+          <a href="../Responsive-Portfolio/assets/images/JDresume2019.pdf">Resume</a>
           <a href="https://github.com/JulesDisch">GitHub</a>
         </div>
       </div>
@@ -91,11 +91,8 @@
                 </li>
               </ul>
             </div>
-            <div class="column-3">
-            </div>
           </div>
         </div>
-        
         <h2> 90s Bands Word Guess Game</h2>
         <div id = "workKey">
         <p id="Directions-text"> Press any key to get started!</p>
