--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
 
 <header>
   <div class="navbar">
-    <a id="logo" href="#">Julia Dischell</a>
-    <nav>
-      <div class="dropdown">
-        <button class="dropbtn"><a href="../Responsive-Portfolio/index.html">About</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="https://www.linkedin.com/in/juliadischell/">LinkedIn</a>
-          <a href="../Responsive-Portfolio/assets/images/JDresume2019.pdf">Resume</a>
-          <a href="https://github.com/JulesDisch">GitHub</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn"> <a href="../Responsive-Portfolio/contact.html">Contact</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="mailto:jmdischell@gmail.com">Email</a>
-          <a href="tel:12158962289">Call</a>
-        </div>
-      </div>
-      <a href="../Responsive-Portfolio/portfolio.html">Portfolio</a>
-
-    </nav>
+      <a id="logo" href="#">Julia Dischell</a>
+      <nav>
+          <div class="dropdown">
+              <button class="dropbtn"><a>About</a>
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                      <a href="../Responsive-Portfolio/assets/images/JDresume2019.pdf" target="_blank">Resume</a>  
+                  <a href="https://www.linkedin.com/in/juliadischell/" target="_blank">LinkedIn</a>
+                  <a href="https://github.com/JulesDisch" target="_blank">GitHub</a>
+              </div>
+          </div>
+          <div class="dropdown">
+              <button class="dropbtn"> <a>Contact</a>
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                  <a href="mailto:jmdischell@gmail.com">Email</a>
+                  <a href="tel:12158962289">Call</a>
+                  <a href="../Responsive-Portfolio/contact.html">Contact form</a>
+              </div>
+          </div>
+          <a href="../Responsive-Portfolio/portfolio.html">Portfolio</a>
+      </nav>
   </div>
 </header>
 
