added in bio to navbar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   <title>Word Guess | Julia Dischell</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
   <link rel="manifest" href="assets/images/site.webmanifest">
-
 </head>
-<!-- Site Header -->
 
 <header>
   <div class="navbar">
@@ -26,6 +23,7 @@
                   <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
+                  <a href="../Responsive-Portfolio/index.html">Bio</a>
                       <a href="../Responsive-Portfolio/assets/images/JDresume2019.pdf" target="_blank">Resume</a>  
                   <a href="https://www.linkedin.com/in/juliadischell/" target="_blank">LinkedIn</a>
                   <a href="https://github.com/JulesDisch" target="_blank">GitHub</a>
